--- a/src/app/pages/home/components/current-weather/current-weather.component.html
+++ b/src/app/pages/home/components/current-weather/current-weather.component.html
@@ -3,16 +3,14 @@
 
     <h2>{{ cityName }}</h2>
 
-    <jv-detailed-weather [weather]="cityWeather.weather"
-                         [unit]="unit"></jv-detailed-weather>
+    <jv-detailed-weather [weather]="cityWeather.weather"></jv-detailed-weather>
 
     <div class="card-actions">
       <a class="card-link" (click)="onToggleBookmark()">
         {{ isFavorite ? 'Remover dos favoritos' : 'Adicionar aos favoritos' }}
       </a>
       <a class="card-link"
-         routerLink="/details"
-         [queryParams]="{ lat: cityWeather.city.coord.lat, lon: cityWeather.city.coord.lon }">
+         routerLink="/details">
         Ver detalhes
       </a>
     </div>
