--- a/src/app/pages/bookmarks/containers/bookmarks/bookmarks.page.html
+++ b/src/app/pages/bookmarks/containers/bookmarks/bookmarks.page.html
@@ -8,8 +8,7 @@
 
       <ul class="list-unstyled">
         <li *ngFor="let bookmark of bookmarks$ | async">
-          <a [routerLink]="['../details']"
-             [queryParams]="{lat: bookmark.coord.lat, lon: bookmark.coord.lon}">
+          <a [routerLink]="['../details']">
             {{ bookmark.name }}
           </a>
           <button class="btn btn-outline-dark btn-sm"
@@ -21,7 +20,6 @@
 
     <div>
       <label>Adicionar cidade aos favoritos</label>
-      <jv-cities-typeahead [formControl]="searchTypeaheadControl"></jv-cities-typeahead>
     </div>
 
   </div>
