--- a/src/app/shared/components/detailed-weather/detailed-weather.component.html
+++ b/src/app/shared/components/detailed-weather/detailed-weather.component.html
@@ -6,8 +6,8 @@
   </div>
 
   <div class="weather-temp">
-    <h3>{{ weather.temp }} {{ unitSymbol }}</h3>
-    <span>Sensação térmica: {{ weather.feelsLike }} {{ unitSymbol }}</span>
+    <h3>{{ weather.temp }} K</h3>
+    <span>Sensação térmica: {{ weather.feelsLike }} K</span>
   </div>
 
   <div class="weather-misc">
